# screenshot

./: README.txt  go.mod  go.sum  screenshot.go
include/: screen.h
mingw-screenshot-dll/: CMakeLists.txt  README.txt
mingw-screenshot-dll/include/screencapture/: Base.h  ScreenCapture.h
mingw-screenshot-dll/include/screencapture/win/: ScreenCaptureDuplicateOutputDirect3D11.h  ScreenCapturePointerDirect3D11.h  ScreenCaptureRendererDirect3D11.h
mingw-screenshot-dll/interface/: interface.cpp  interface.h  main.cpp
mingw-screenshot-dll/src/: ScreenCapture.cpp
mingw-screenshot-dll/src/win/: ScreenCaptureDuplicateOutputDirect3D11.cpp  ScreenCaptureRendererDirect3D11.cpp
mingw-screenshot-dll/test/: test_api.cpp  test_win_api.cpp
src/: CMakeLists.txt  interface.h  screen.cpp
test/: main.go
